--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: niccokunzmann/ci-latex
 PDFs:
   stage: build
   script:
+  - pdflatex -interaction=nonstopmode -halt-on-error My-Questionnaire.tex
   - cd GodSpeed
   - pdflatex -interaction=nonstopmode -halt-on-error GodSpeed.tex
   - cd ../RoSAS
@@ -11,5 +12,6 @@ PDFs:
   - master
   artifacts:
     paths:
+    - My-Questionnaire.pdf
     - GodSpeed/GodSpeed.pdf
     - RoSAS/RoSAS.pdf    
